--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2588,52 +2588,31 @@ procedure provided by Waeselynck 2024.[fn::Waeselynck2024]
 
 #+name: surface-fire-combine-wind-and-slope-vectors
 #+begin_src python
-from math import sqrt
-import numpy as np
 from pyretechnics.conversion import azimuthal_to_cartesian
-
-
-def vector_magnitude(vector):
-    return sqrt(np.dot(vector, vector))
-
-
-def to_slope_plane(vector_2d, upslope_vector_2d):
-    return (
-        vector_2d[0],
-        vector_2d[1],
-        np.dot(vector_2d, upslope_vector_2d)
-    )
-
-
-def to_horizontal_plane(vector_3d):
-    return vector_3d[0:2]
-
-
-def as_unit_vector(vector):
-    return np.asarray(vector) / vector_magnitude(vector)
+from pyretechnics.vector_utils import vector_magnitude, as_unit_vector, to_slope_plane
 
 
 def combine_wind_and_slope_vectors(midflame_wind_speed, downwind_direction, slope, upslope_direction,
                                    get_phi_S, get_phi_W):
     # Create the 2D elevation gradient vector grad_z
-    grad_z = azimuthal_to_cartesian(slope, upslope_direction)
+    grad_z    = azimuthal_to_cartesian(slope, upslope_direction)
     # Create the 2D wind direction vector W_h
-    W_h = azimuthal_to_cartesian(midflame_wind_speed, downwind_direction)
+    W_h       = azimuthal_to_cartesian(midflame_wind_speed, downwind_direction)
     # Create the 3D slope-tangential unit vector u_s pointing upslope
     grad_z_3d = to_slope_plane(grad_z, grad_z)
     u_s       = as_unit_vector(grad_z_3d)
     # Create the 3D slope-tangential unit vector w_s pointing downwind
-    W_h_3d = to_slope_plane(W_h, grad_z)
-    w_s    = as_unit_vector(W_h_3d)
+    W_h_3d    = to_slope_plane(W_h, grad_z)
+    w_s       = as_unit_vector(W_h_3d)
     # Calculate phi_S and phi_W
-    phi_S = get_phi_S(slope)
-    phi_W = get_phi_W(vector_magnitude(W_h_3d)) # |W_h_3d| = slope-aligned midflame wind speed
+    phi_S     = get_phi_S(slope)
+    phi_W     = get_phi_W(vector_magnitude(W_h_3d)) # |W_h_3d| = slope-aligned midflame wind speed
     # Create the 3D slope-tangential phi_S vector
-    phi_S_3d = phi_S * u_s
+    phi_S_3d  = phi_S * u_s
     # Create the 3D slope-tangential phi_W vector
-    phi_W_3d = phi_W * w_s
+    phi_W_3d  = phi_W * w_s
     # Create the 3D slope-tangential phi_E vector
-    phi_E_3d = phi_S_3d + phi_W_3d
+    phi_E_3d  = phi_S_3d + phi_W_3d
     return phi_E_3d
 #+end_src
 
@@ -2733,6 +2712,7 @@ off.
 from math import sqrt
 import numpy as np
 from pyretechnics.conversion import opposite_direction
+from pyretechnics.vector_utils import vector_magnitude
 
 
 def maybe_limit_wind_speed(use_wind_limit, max_wind_speed, get_phi_W, get_wind_speed, phi_E_magnitude):
@@ -5282,6 +5262,89 @@ def wind_speed_10m_to_wind_speed_20ft(wind_speed_10m):
 def wind_speed_20ft_to_wind_speed_10m(wind_speed_20ft):
     """Convert wind speed at 20ft to wind speed at 10m."""
     return wind_speed_20ft / 0.87
+#+end_src
+
+** Vector Utility Functions (pyretechnics.vector_utils)
+   :PROPERTIES:
+   :header-args:python+: :session *pyretechnics.vector_utils*
+   :header-args:python+: :tangle  ../src/pyretechnics/vector_utils.py
+   :END:
+
+#+name: vector-utilities
+#+begin_src python
+from math import degrees, radians, sin, cos, acos, atan2, sqrt
+import numpy as np
+
+
+def vector_magnitude(vector):
+    return sqrt(np.dot(vector, vector))
+
+
+def as_unit_vector(vector):
+    return np.asarray(vector) / vector_magnitude(vector)
+
+
+def to_slope_plane(vector_2d, upslope_vector_2d):
+    return (
+        vector_2d[0],
+        vector_2d[1],
+        np.dot(vector_2d, upslope_vector_2d)
+    )
+
+
+def to_horizontal_plane(vector_3d):
+    return vector_3d[0:2]
+
+
+def get_slope_normal_vector(upslope_vector_2d):
+    slope_normal_vector = (-upslope_vector_2d[0], -upslope_vector_2d[1], 1)
+    return as_unit_vector(slope_normal_vector)
+
+
+def rotate_x(vector, theta):
+    """Rotate a 3D vector <x,y,z> theta degrees clockwise around the x axis."""
+    theta_rad       = radians(theta)
+    rotation_matrix = [[1.0,            0.0,             0.0],
+                       [0.0, cos(theta_rad), -sin(theta_rad)],
+                       [0.0, sin(theta_rad),  cos(theta_rad)]]
+    return np.dot(rotation_matrix, vector)
+
+
+def rotate_y(vector, theta):
+    """Rotate a 3D vector <x,y,z> theta degrees clockwise around the y axis."""
+    theta_rad       = radians(theta)
+    rotation_matrix = [[ cos(theta_rad), 0.0, sin(theta_rad)],
+                       [            0.0, 1.0,            0.0],
+                       [-sin(theta_rad), 0.0, cos(theta_rad)]]
+    return np.dot(rotation_matrix, vector)
+
+
+def rotate_z(vector, theta):
+    """Rotate a 3D vector <x,y,z> theta degrees clockwise around the z axis."""
+    theta_rad       = radians(theta)
+    rotation_matrix = [[cos(theta_rad), -sin(theta_rad), 0.0],
+                       [sin(theta_rad),  cos(theta_rad), 0.0],
+                       [           0.0,             0.0, 1.0]]
+    return np.dot(rotation_matrix, vector)
+
+
+def rotate_on_sloped_plane(vector, theta, slope_normal_vector):
+    """Rotate a 3D vector <x,y,z> theta degrees clockwise on the plane defined by the slope_normal_vector."""
+    # Rotate around z axis to align n_S with the y-z plane
+    (n_Sx, n_Sy, n_Sz) = slope_normal_vector
+    z_angle = degrees(atan2(n_Sx, n_Sy))
+    vector1 = rotate_z(vector, z_angle)
+    # Rotate around x axis to align n_S with the z axis
+    x_angle = degrees(acos(n_Sz / vector_magnitude(slope_normal_vector)))
+    vector2 = rotate_x(vector1, x_angle)
+    # Now the sloped plane is the x-y plane!
+    # Rotate around z axis (a.k.a. n_S) to turn the input vector theta degrees clockwise
+    vector3 = rotate_z(vector2, theta)
+    # Reverse the earlier x axis rotation
+    vector4 = rotate_x(vector3, -x_angle)
+    # Reverse the initial z axis rotation
+    vector5 = rotate_z(vector4, -z_angle)
+    return vector5
 #+end_src
 
 ** SpaceTimeCube and LazySpaceTimeCube Tests (pyretechnics_test.test_space_time_cube)
