Simplified API for pyretechnics.vector_utils.rotate_on_sloped_plane

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -3047,7 +3047,6 @@ Surface Fire Behavior Max (Unlimited) for Fuel Model GR1 with Fuel Moisture = [0
 #+name: compute-surface-fire-behavior-in-direction
 #+begin_src python
 from pprint import pprint
-import pyretechnics.conversion as conv
 import pyretechnics.fuel_models as fm
 import pyretechnics.surface_fire as sf
 import pyretechnics.vector_utils as vu
@@ -3086,9 +3085,7 @@ flanking_fire_offset    = 90.0
 backing_fire_offset     = 180.0
 
 heading_fire_direction  = surface_fire_max["max_spread_direction"]
-grad_z                  = conv.azimuthal_to_cartesian(slope, conv.opposite_direction(aspect))
-slope_normal_vector     = vu.get_slope_normal_vector(grad_z)
-flanking_fire_direction = vu.rotate_on_sloped_plane(heading_fire_direction, 90, slope_normal_vector)
+flanking_fire_direction = vu.rotate_on_sloped_plane(heading_fire_direction, 90, slope, aspect)
 backing_fire_direction  = -heading_fire_direction
 
 heading_fire_behavior1  = sf.calc_surface_fire_behavior_from_offset_angle(surface_fire_max, heading_fire_offset)
@@ -5278,6 +5275,7 @@ def wind_speed_20ft_to_wind_speed_10m(wind_speed_20ft):
 #+begin_src python
 from math import degrees, radians, sin, cos, acos, atan2, sqrt
 import numpy as np
+import pyretechnics.conversion as conv
 
 
 def vector_magnitude(vector):
@@ -5288,11 +5286,11 @@ def as_unit_vector(vector):
     return np.asarray(vector) / vector_magnitude(vector)
 
 
-def to_slope_plane(vector_2d, upslope_vector_2d):
+def to_slope_plane(vector_2d, elevation_gradient):
     return (
         vector_2d[0],
         vector_2d[1],
-        np.dot(vector_2d, upslope_vector_2d)
+        np.dot(vector_2d, elevation_gradient)
     )
 
 
@@ -5300,8 +5298,8 @@ def to_horizontal_plane(vector_3d):
     return vector_3d[0:2]
 
 
-def get_slope_normal_vector(upslope_vector_2d):
-    slope_normal_vector = (-upslope_vector_2d[0], -upslope_vector_2d[1], 1)
+def get_slope_normal_vector(elevation_gradient):
+    slope_normal_vector = (-elevation_gradient[0], -elevation_gradient[1], 1)
     return as_unit_vector(slope_normal_vector)
 
 
@@ -5332,10 +5330,13 @@ def rotate_z(vector, theta):
     return np.dot(rotation_matrix, vector)
 
 
-def rotate_on_sloped_plane(vector, theta, slope_normal_vector):
-    """Rotate a 3D vector <x,y,z> theta degrees clockwise on the plane defined by the slope_normal_vector."""
+def rotate_on_sloped_plane(vector, theta, slope, aspect):
+    """Rotate a 3D vector <x,y,z> theta degrees clockwise on the plane defined by the slope and aspect."""
+    # Calculate the slope normal vector from the slope and aspect
+    elevation_gradient  = conv.azimuthal_to_cartesian(slope, conv.opposite_direction(aspect))
+    slope_normal_vector = get_slope_normal_vector(elevation_gradient)
+    (n_Sx, n_Sy, n_Sz)  = slope_normal_vector
     # Rotate around z axis to align n_S with the y-z plane
-    (n_Sx, n_Sy, n_Sz) = slope_normal_vector
     z_angle = degrees(atan2(n_Sx, n_Sy))
     vector1 = rotate_z(vector, z_angle)
     # Rotate around x axis to align n_S with the z axis
