--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -3378,7 +3378,7 @@ def cruz_crown_fire_spread_info(wind_speed_10m, canopy_bulk_density, estimated_f
     - estimated_fine_fuel_moisture (M_f[0] "dead-1hr") :: kg moisture/kg ovendry weight
 
     return a dictionary containing these keys:
-    - spread_type          :: "passive" or "active"
+    - fire_type            :: "passive" or "active"
     - spread_rate          :: m/min
     - critical_spread_rate :: m/min
     """
@@ -3388,13 +3388,13 @@ def cruz_crown_fire_spread_info(wind_speed_10m, canopy_bulk_density, estimated_f
     critical_spread_rate = van_wagner_critical_spread_rate(canopy_bulk_density) # m/min
     if (active_spread_rate > critical_spread_rate):
         return {
-            "spread_type"         : "active",
+            "fire_type"           : "active",
             "spread_rate"         : active_spread_rate,
             "critical_spread_rate": critical_spread_rate,
         }
     else:
         return {
-            "spread_type"         : "passive",
+            "fire_type"           : "passive",
             "spread_rate"         : cruz_passive_crown_fire_spread_rate(active_spread_rate, critical_spread_rate),
             "critical_spread_rate": critical_spread_rate,
         }
@@ -3552,7 +3552,7 @@ def calc_crown_fire_behavior_max(canopy_height, canopy_base_height, canopy_bulk_
     - aspect                                           :: degrees clockwise from North
 
     return a dictionary containing these keys:
-    - max_spread_type        :: "passive" or "active"
+    - max_fire_type          :: "passive" or "active"
     - max_spread_rate        :: m/min
     - max_spread_direction   :: (x, y, z) unit vector
     - max_spread_vector      :: (x: m/min, y: m/min, z: m/min)
@@ -3585,7 +3585,7 @@ def calc_crown_fire_behavior_max(canopy_height, canopy_base_height, canopy_bulk_
     length_to_width_ratio = crown_length_to_width_ratio(wind_speed_20ft_mph) # unitless
     eccentricity          = crown_fire_eccentricity(length_to_width_ratio)   # unitless
     return {
-        "max_spread_type"       : spread_info["spread_type"],
+        "max_fire_type"         : spread_info["fire_type"],
         "max_spread_rate"       : spread_rate,
         "max_spread_direction"  : max_spread_direction, # unit vector
         "max_spread_vector"     : spread_rate * max_spread_direction,
@@ -3640,7 +3640,7 @@ def calc_crown_fire_behavior_in_direction(crown_fire_max, spread_direction):
     """
     Given these inputs:
     - crown_fire_max     :: dictionary of max crown fire behavior values
-      - max_spread_type        :: "passive" or "active"
+      - max_fire_type          :: "passive" or "active"
       - max_spread_rate        :: m/min
       - max_spread_direction   :: (x, y, z) unit vector
       - max_spread_vector      :: (x: m/min, y: m/min, z: m/min)
@@ -3651,12 +3651,12 @@ def calc_crown_fire_behavior_in_direction(crown_fire_max, spread_direction):
     - spread_direction   :: 3D unit vector on the slope-tangential plane
 
     return a dictionary containing these keys:
-    - spread_type        :: "passive" or "active"
+    - fire_type          :: "passive" or "active"
     - spread_rate        :: m/min
     - fireline_intensity :: kW/m
     """
     # Unpack max crown fire behavior values
-    max_spread_type        = crown_fire_max["max_spread_type"]
+    max_fire_type          = crown_fire_max["max_fire_type"]
     max_spread_rate        = crown_fire_max["max_spread_rate"]
     max_spread_direction   = crown_fire_max["max_spread_direction"]
     max_fireline_intensity = crown_fire_max["max_fireline_intensity"]
@@ -3671,21 +3671,21 @@ def calc_crown_fire_behavior_in_direction(crown_fire_max, spread_direction):
     if spread_rate > critical_spread_rate:
         # Max spread rate was active and directional spread rate remains active
         return {
-            "spread_type"       : "active",
+            "fire_type"         : "active",
             "spread_rate"       : spread_rate,
             "fireline_intensity": max_fireline_intensity * adjustment,
         }
-    elif max_spread_type == "passive":
+    elif max_fire_type == "passive":
         # Max spread rate was passive and directional spread rate remains passive
         return {
-            "spread_type"       : "passive",
+            "fire_type"         : "passive",
             "spread_rate"       : spread_rate,
             "fireline_intensity": max_fireline_intensity * adjustment,
         }
     else:
         # Max spread rate was active and directional spread rate has become passive
         return {
-            "spread_type"       : "passive",
+            "fire_type"         : "passive",
             "spread_rate"       : cruz_passive_crown_fire_spread_rate(spread_rate, critical_spread_rate),
             "fireline_intensity": max_fireline_intensity * adjustment,
         }
@@ -3722,7 +3722,7 @@ def calc_combined_fire_behavior_in_direction(surface_fire_max, crown_fire_max, s
       - length_to_width_ratio  :: unitless (1: circular spread, > 1: elliptical spread)
       - eccentricity           :: unitless (0: circular spread, > 0: elliptical spread)
     - crown_fire_max       :: dictionary of max crown fire behavior values
-      - max_spread_type        :: "passive" or "active"
+      - max_fire_type          :: "passive" or "active"
       - max_spread_rate        :: m/min
       - max_spread_direction   :: (x, y, z) unit vector
       - max_spread_vector      :: (x: m/min, y: m/min, z: m/min)
@@ -3733,7 +3733,7 @@ def calc_combined_fire_behavior_in_direction(surface_fire_max, crown_fire_max, s
     - spread_direction     :: 3D unit vector on the slope-tangential plane
 
     return a dictionary containing these keys:
-    - spread_type        :: "surface", "passive", or "active"
+    - fire_type          :: "surface", "passive", or "active"
     - spread_rate        :: m/min
     - fireline_intensity :: kW/m
     """
@@ -3743,21 +3743,21 @@ def calc_combined_fire_behavior_in_direction(surface_fire_max, crown_fire_max, s
     surface_fireline_intensity = conv.Btu_ft_s_to_kW_m(surface_fire_behavior["fireline_intensity"]) # kW/m
     # Calculate the crown fire behavior in spread_direction
     crown_fire_behavior      = calc_crown_fire_behavior_in_direction(crown_fire_max, spread_direction)
-    crown_spread_type        = crown_fire_behavior["spread_type"]        # "passive" or "active"
+    crown_fire_type          = crown_fire_behavior["fire_type"]          # "passive" or "active"
     crown_spread_rate        = crown_fire_behavior["spread_rate"]        # m/min
     crown_fireline_intensity = crown_fire_behavior["fireline_intensity"] # kW/m
     # Determine whether the surface or crown fire has the fastest spread rate
     if surface_spread_rate > crown_spread_rate:
         # Surface fire spreads faster
         return {
-            "spread_type"       : "surface",
+            "fire_type"         : "surface",
             "spread_rate"       : surface_spread_rate,
             "fireline_intensity": surface_fireline_intensity + crown_fireline_intensity,
         }
     else:
         # Crown fire spreads faster
         return {
-            "spread_type"       : crown_spread_type,
+            "fire_type"         : crown_fire_type,
             "spread_rate"       : crown_spread_rate,
             "fireline_intensity": surface_fireline_intensity + crown_fireline_intensity,
         }
@@ -4890,7 +4890,7 @@ def compute_max_in_situ_values(inputs, t, y, x):
             crown_spread_info     = cf.cruz_crown_fire_spread_info(conv.m_min_to_km_hr(wind_speed_10m),
                                                                    canopy_bulk_density,
                                                                    fuel_moisture_dead_1hr)
-            fire_type             = crown_spread_info["spread_type"] # "passive" or "active"
+            fire_type             = crown_spread_info["fire_type"] # "passive" or "active"
             max_crown_spread_rate = conv.m_to_ft(crown_spread_info["spread_rate"]) # ft/min
             crown_eccentricity    = (
                 surface_eccentricity
